// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Breadcrumbs > should match the snapshot (localized) 1`] = `
<body>
  <div>
    <nav
      class="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-5jrdvz-MuiTypography-root-MuiBreadcrumbs-root"
    >
      <ol
        class="MuiBreadcrumbs-ol css-4pdmu4-MuiBreadcrumbs-ol"
      >
        <li
          class="MuiBreadcrumbs-li"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-159dm8u-MuiTypography-root-MuiLink-root"
            href="/it/"
          >
            home
          </a>
        </li>
        <li
          aria-hidden="true"
          class="MuiBreadcrumbs-separator css-1wuw8dw-MuiBreadcrumbs-separator"
        >
          /
        </li>
        <li
          class="MuiBreadcrumbs-li"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-159dm8u-MuiTypography-root-MuiLink-root"
            href="/it/page-1"
          >
            page-1
          </a>
        </li>
        <li
          aria-hidden="true"
          class="MuiBreadcrumbs-separator css-1wuw8dw-MuiBreadcrumbs-separator"
        >
          /
        </li>
        <li
          class="MuiBreadcrumbs-li"
        >
          <span>
            dynamic-page-1
          </span>
        </li>
      </ol>
    </nav>
  </div>
</body>
`;

exports[`Breadcrumbs > should match the snapshot 1`] = `
<body>
  <div>
    <nav
      class="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-5jrdvz-MuiTypography-root-MuiBreadcrumbs-root"
    >
      <ol
        class="MuiBreadcrumbs-ol css-4pdmu4-MuiBreadcrumbs-ol"
      >
        <li
          class="MuiBreadcrumbs-li"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-159dm8u-MuiTypography-root-MuiLink-root"
            href="/"
          >
            home
          </a>
        </li>
        <li
          aria-hidden="true"
          class="MuiBreadcrumbs-separator css-1wuw8dw-MuiBreadcrumbs-separator"
        >
          /
        </li>
        <li
          class="MuiBreadcrumbs-li"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-159dm8u-MuiTypography-root-MuiLink-root"
            href="/page-1"
          >
            page-1
          </a>
        </li>
        <li
          aria-hidden="true"
          class="MuiBreadcrumbs-separator css-1wuw8dw-MuiBreadcrumbs-separator"
        >
          /
        </li>
        <li
          class="MuiBreadcrumbs-li"
        >
          <span>
            dynamic-page-1
          </span>
        </li>
      </ol>
    </nav>
  </div>
</body>
`;
